twin cities initial

--- a/dev-api.env
+++ b/dev-api.env
@@ -2,5 +2,5 @@
 ENVIRONMENT=d
 # NODE BASE
 NODE_IMAGE=current-slim
-NODE_CONTAINER_NAME="chatt-yyh-front"
+NODE_CONTAINER_NAME="tc-yyh-front"
 #NODE_DEV_DIR="NODE-Dev-App"
